src/objects/BLND_DFDT_Task__c.object
<CustomObject>
    <fields>
        <fullName>BLND_Approval__c</fullName>
        <label>Approval</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Autonum__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Autonum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BLND_Billable_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DreamTeam Tasks</relationshipLabel>
        <relationshipName>DreamTeam_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Complete__c</fullName>
        <label>Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Constraint_Date__c</fullName>
        <label>Constraint Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Constraint_Type__c</fullName>
        <label>Constraint Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Cost_Baseline__c</fullName>
        <label>Cost Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Dependent__c</fullName>
        <label>Dependent</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Document_Link__c</fullName>
        <label>Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLND_DreamFactory__c</fullName>
        <label>DreamFactory</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Business_Days__c</fullName>
        <label>Duration In Business Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Duration_In_Calendar_Days__c</fullName>
        <label>Duration In Calendar Days</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Duration__c</fullName>
        <label>Duration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Finish_Baseline__c</fullName>
        <label>Finish Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Finish__c</fullName>
        <label>Finish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_ID_Number__c</fullName>
        <label>ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Index__c</fullName>
        <label>Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Job_Forecasting__c</fullName>
        <label>Job Forecasting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DreamTeam Tasks</relationshipLabel>
        <relationshipName>DreamTeam_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Link__c</fullName>
        <label>Link</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_Opp_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DreamTeam Tasks</relationshipLabel>
        <relationshipName>DreamTeam_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Planned_Est_1__c</fullName>
        <label>Planned Est 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Planned_Est_2__c</fullName>
        <label>Planned Est 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Pool_Number__c</fullName>
        <label>Pool Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Project_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Link</label>
        <referenceTo>BLND_DFDT_Project__c</referenceTo>
        <relationshipName>R00N30000002PYhyEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Real_Cost__c</fullName>
        <label>Real Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Resources__c</fullName>
        <label>Resources</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue_Baseline__c</fullName>
        <label>Revenue Baseline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BLND_Schedule__c</fullName>
        <label>Schedule</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BLND_Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Start_Baseline__c</fullName>
        <label>Start Baseline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Start__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLND_Subtask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subtask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Tabs__c</fullName>
        <label>Tabs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Low Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Actual_Hours__c</fullName>
        <label>Work In Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work_In_Planned_Hours__c</fullName>
        <label>Work In Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Work__c</fullName>
        <label>Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_comment__c</fullName>
        <label>comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLND_snapshot_package_test__c</fullName>
        <label>snapshot package test</label>
        <type>AutoNumber</type>
    </fields>
    <label>DreamTeam Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>